--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "swiper": "^11.2.10"
   },
